scss/main.scss
// Setting up mixin for media queries

@mixin small-laptop {
  @media screen and (min-width: 620px) and (max-width: 840px) {
    @content;
  }
}

@mixin tablet {
  @media screen and (max-width: 665px) {
    @content;
  }
}

@mixin mobile {
  @media screen and (max-width: 550px) {
    @content;
  }
}

// Setting up variables

:root {
  --fw-light: 300;
  --fw-normal: 400;
  --fw-semi: 500;
  --fw-bold: 700;
  --fs-h1: 1.5rem;
  --fs-h2: 2.25rem;
  --fs-body: 1rem;
  --fs-xl: 4.5rem;
  --color-light: #fff;
  --color-gray: #989898;
  --color-dark: #444;
  --color-accent: #d06d6d;
  --color-accent-dark: #613131;
}

a,
a:visited {
  text-decoration: none;
  color: var(--color-accent);
}

* {
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
  padding: 0;
  margin: 0;
}

body {
  height: 50vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../img/mars.jpg);
  background-size: cover;
  background-attachment: fixed;
  overflow: hidden;

  @include mobile() {
    height: auto;
  }
}

.sr-only {
  visibility: hidden;
  position: absolute;
}

// main body

.mars-weather {
  margin: 10px;
  background-color: var(--color-dark);
  max-width: 900px;
  opacity: 0.7;
  padding: 20px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, auto);
  gap: 20px;
  justify-items: start;

  h1.main-title {
    text-transform: uppercase;
    grid-column: 1 / -1;
    font-size: var(--fs-h1);
    font-weight: var(--fw-bold);
    color: var(--color-accent);
    justify-self: left;
  }

  .description {
    grid-column: 1 / 3;

    p {
      font-size: 0.8rem;
    }
  }

  p,
  label {
    color: white;
  }

  section {
    padding-left: 20px;
    padding-right: 20px;

    .section-title {
      color: white;
      font-size: var(--fs-h1);
      font-weight: var(--fw-bold);
    }

    &.sol {
      padding-left: 0;
      justify-self: start;
      .section-title {
        font-size: var(--fs-h2);
      }

      @include tablet() {
        grid-column: 1 / span 1;
        justify-self: start;
        padding-left: 20px;
      }
    }

    &.temp,
    &.wind {
      border-left: solid 4px var(--color-accent);
    }

    &.temp {
      @include tablet() {
        grid-column: 1 / span 1;
        border-left: none;
      }
    }

    &.wind {
      @include tablet() {
        grid-column: 2 / span 1;
        grid-row: 2 / span 2;
      }

      @include mobile() {
        grid-column: 1 / span 1;
        grid-row: span 1;
        border-left: none;
        justify-self: end;
        overflow: hidden;
      }
    }
  }

  @include tablet() {
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    margin: 5px;
  }

  @include mobile() {
    max-width: 400px;
    grid-template-columns: 1fr;
    overflow: scroll;
    justify-items: start;
  }
}

// setting up the wind indicator
.wind {
  display: grid;
  justify-items: center;
  align-items: center;
  grid-template-columns: repeat(2, 1fr);
  h2 {
    grid-column: 2/3;
  }
  p {
    grid-column: 2/3;
  }

  @include tablet() {
    align-content: center;
  }
}

.wind-direction {
  --size: 6rem;
  grid-column: 1 / span 1;
  grid-row: 1 / 3;
  border-radius: 50%;
  height: var(--size);
  width: var(--size);
  background: var(--color-gray);
  display: grid;
  place-items: center;
}

.wind-arrow {
  --direction: 45deg;
  --size: 1rem;
  width: var(--size);
  height: calc(var(--size) * 3);
  clip-path: polygon(50% 0, 0 100%, 100% 100%);
  transform: translateY(-50%) rotate(var(--direction));
  transform-origin: center bottom;
  background: var(--color-accent-dark);
}

// setting up the conversion toggle button

.unit {
  opacity: 0.7;
  grid-column: 3 / 4;
  place-self: end;
  display: flex;
  align-items: center;
  color: var(--color-light);
  transition: opacity 275ms;

  &:hover {
    opacity: 1;
  }

  label {
    cursor: pointer;
    padding-right: 5px;
    padding-left: 5px;
  }

  input {
    display: none;
  }

  &-toggle {
    cursor: pointer;
    width: 3rem;
    border: solid 2px var(--color-light);
    border-radius: 20px;
    background: transparent;

    &:after {
      display: block;
      height: 0.8rem;
      width: 0.8rem;
      background: var(--color-light);
      content: "";
      border-radius: 50%;
      margin: 3px;
      margin-left: auto;
    }
  }

  #cel:checked ~ .unit-toggle:after {
    margin-left: 3px;
  }

  @include mobile() {
    grid-column: 1 / span 1;
  }
}

// previous days weather

.previous-weather {
  width: 100%;
  background: var(--color-light);
  position: absolute;
  left: 0;
  bottom: 0;
  transform: translateY(60%);
  transition: transform 500ms ease;
  padding: 3rem;
  border: none;

  @include small-laptop() {
    transform: translateY(70%);
  }

  @include tablet() {
    transform: translateY(80%);
  }

  @include mobile() {
    transform: translateY(100%);
  }
}

.previous-weather-title {
  text-transform: uppercase;
  text-align: center;
  color: var(--color-accent);
  margin-bottom: 1rem;
}

.previous-days {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.previous-day {
  opacity: 0;

  & > * {
    margin: 0;
    border: none;
  }

  &-date {
    font-size: 0.9rem;
    color: var(--color-gray);
  }

  &-more-info {
    cursor: pointer;
    border: 0;
    border-radius: 100vmax;
    padding: 0.3em 1em;
    margin-top: 1em;
    background: var(--color-dark);
    color: var(--color-light);
    text-transform: uppercase;

    &:hover,
    &:focus {
      background: var(--color-gray);
    }
  }
}

// the arrow button
.show-previous-weather {
  position: absolute;
  background: var(--color-light);
  left: 50%;
  width: 10rem;
  transform: translate(-50%, calc(-100% - 3rem));
  text-align: center;
  font-size: var(--fs-h2);
  line-height: 1;
  clip-path: polygon(50% 0, 0 100%, 100% 100%);
  cursor: pointer;
  color: var(--color-gray);
  border: 0;
  font-family: inherit;

  &:hover,
  &:focus {
    color: var(--color-dark);
  }

  span {
    display: block;
    transition: transform 300ms ease;
  }
}

// after adding 'show-weather' class, do the following

.show-weather.previous-weather {
  transform: translateY(0);

  .show-previous-weather span {
    transform: rotate(180deg) translateY(-6px);
  }

  .previous-weather-title,
  .previous-day {
    animation-name: slideUpIn;
    animation-duration: 750ms;
    animation-fill-mode: forwards;
  }

  .previous-weather-title {
    text-align: left;
  }

  @for $i from 1 through 7 {
    .previous-day:nth-child(#{$i}) {
      animation-delay: $i * 25ms;
    }
  }
}

@keyframes slideUpIn {
  0% {
    opacity: 0;
    transform: translateY(100%);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

